Updating the code

--- a/src/app/views/base/forms.component.html
+++ b/src/app/views/base/forms.component.html
@@ -1,198 +1,5 @@
 <div class="animated fadeIn">
 
   <div class="row">
-    <div class="col-md-4">
-      <div class="card">
-        <div class="card-header bg-primary"> Step 1: </div>
-        <div class="card-body"> Add alert visualization
-        </div>  
-      </div>
-      <div class="card">
-        <div class="card-header"> Step 2: </div>
-        <div class="card-body"> Add delivery mechanizm
-        </div>  
-      </div>
-      <div class="card">
-        <div class="card-header"> Step 3: </div>
-        <div class="card-body"> Review
-        </div>  
-      </div>
-    </div>
-    <div class="col-lg-8">
-      <div class="card">
-        <div class="card-header">
-          <strong>Step 1</strong> Add alert visualization
-        </div>
-        <div class="card-body">
-          <form action="" method="post" enctype="multipart/form-data" class="form-horizontal">
-
-            <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="email-input">Email Input</label>
-              <div class="col-md-9">
-                <input type="email" id="email-input" name="email-input" class="form-control" placeholder="Enter Email" autocomplete="email">
-                <span class="help-block">Please enter your email</span>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="password-input">Password</label>
-              <div class="col-md-9">
-                <input type="password" id="password-input" name="password-input" class="form-control" placeholder="Password" autocomplete="current-password">
-                <span class="help-block">Please enter a complex password</span>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="date-input">Date Input</label>
-              <div class="col-md-9">
-                <input class="form-control" id="date-input" type="date" name="date-input" placeholder="date">
-                <span class="help-block">Please enter a valid date</span>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="disabled-input">Disabled Input</label>
-              <div class="col-md-9">
-                <input type="text" id="disabled-input" name="disabled-input" class="form-control" placeholder="Disabled" disabled>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="textarea-input">Textarea</label>
-              <div class="col-md-9">
-                <textarea id="textarea-input" name="textarea-input" rows="9" class="form-control" placeholder="Content.."></textarea>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="select1">Select</label>
-              <div class="col-md-9">
-                <select id="select1" name="select1" class="form-control">
-                  <option value="0">Please select</option>
-                  <option value="1">Option #1</option>
-                  <option value="2">Option #2</option>
-                  <option value="3">Option #3</option>
-                </select>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="select2">Select Large</label>
-              <div class="col-md-9">
-                <select id="select2" name="select2" class="form-control form-control-lg">
-                  <option value="0">Please select</option>
-                  <option value="1">Option #1</option>
-                  <option value="2">Option #2</option>
-                  <option value="3">Option #3</option>
-                </select>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="select3">Select Small</label>
-              <div class="col-md-9">
-                <select id="select3" name="select3" class="form-control form-control-sm">
-                  <option value="0">Please select</option>
-                  <option value="1">Option #1</option>
-                  <option value="2">Option #2</option>
-                  <option value="3">Option #3</option>
-                </select>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-md-3 col-form-label" >Radios</label>
-              <div class="col-md-9 col-form-label">
-                <div class="form-check">
-                  <input class="form-check-input" type="radio" name="radios" id="radio1" value="option1" checked>
-                  <label class="form-check-label" for="radio1">
-                    Option 1
-                  </label>
-                </div>
-                <div class="form-check">
-                  <input class="form-check-input" type="radio" name="radios" id="radio2" value="option2">
-                  <label class="form-check-label" for="radio2">
-                    Option 2
-                  </label>
-                </div>
-                <div class="form-check">
-                  <input class="form-check-input" type="radio" name="radios" id="radio3" value="option3">
-                  <label class="form-check-label" for="radio3">
-                    Option 3
-                  </label>
-                </div>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="inline-radios">Inline Radios</label>
-              <div class="col-md-9 col-form-label">
-                <div class="form-check form-check-inline mr-1" id="inline-radios">
-                  <input class="form-check-input" type="radio" name="inline-radios" id="inlineRadio1" value="option1">
-                  <label class="form-check-label" for="inlineRadio1">One</label>
-                </div>
-                <div class="form-check form-check-inline mr-1">
-                  <input class="form-check-input" type="radio" name="inline-radios" id="inlineRadio2" value="option2">
-                  <label class="form-check-label" for="inlineRadio2">Two</label>
-                </div>
-                <div class="form-check form-check-inline mr-1">
-                  <input class="form-check-input" type="radio" name="inline-radios" id="inlineRadio3" value="option3">
-                  <label class="form-check-label" for="inlineRadio3">Three</label>
-                </div>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-md-3 col-form-label">Checkboxes</label>
-              <div class="col-md-9 col-form-label">
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" value="option1" id="checkbox1">
-                  <label class="form-check-label" for="checkbox1">
-                    Option 1
-                  </label>
-                </div>
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" value="option1" id="checkbox2">
-                  <label class="form-check-label" for="checkbox2">
-                    Option 2
-                  </label>
-                </div>
-                <div class="form-check checkbox">
-                  <input class="form-check-input" type="checkbox" value="option1" id="checkbox3">
-                  <label class="form-check-label" for="checkbox3">
-                    Option 3
-                  </label>
-                </div>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-md-3 col-form-label">Inline Checkboxes</label>
-              <div class="col-md-9 col-form-label">
-                <div class="form-check form-check-inline mr-1">
-                  <input class="form-check-input" type="checkbox" id="inline-checkbox1" value="option1">
-                  <label class="form-check-label" for="inline-checkbox1">One</label>
-                </div>
-                <div class="form-check form-check-inline mr-1">
-                  <input class="form-check-input" type="checkbox" id="inline-checkbox2" value="option2">
-                  <label class="form-check-label" for="inline-checkbox2">Two</label>
-                </div>
-                <div class="form-check form-check-inline mr-1">
-                  <input class="form-check-input" type="checkbox" id="inline-checkbox3" value="option3">
-                  <label class="form-check-label" for="inline-checkbox3">Three</label>
-                </div>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="file-input">File input</label>
-              <div class="col-md-9">
-                <input type="file" id="file-input" name="file-input">
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="file-multiple-input">Multiple File input</label>
-              <div class="col-md-9">
-                <input type="file" id="file-multiple-input" name="file-multiple-input" multiple>
-              </div>
-            </div>
-          </form>
-        </div>
-        <div class="card-footer">
-          <button [routerLink]="'/base/tabs'" type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Submit</button>
-          <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Reset</button>
-        </div>
-      </div>
-      
-    </div>
-    
-  </div><!--/.row-->
+<div class="col-md-6 mb-4"><tabset _nghost-mdr-c0="" class="tab-container"><ul _ngcontent-mdr-c0="" class="nav nav-tabs" role="tablist" aria-label="Tabs"><!----><li _ngcontent-mdr-c0="" class="nav-item active ng-star-inserted"><a _ngcontent-mdr-c0="" class="nav-link active" href="javascript:void(0);" role="tab" aria-controls="" aria-selected="true" id=""><span _ngcontent-mdr-c0="">Home</span><!----></a></li><li _ngcontent-mdr-c0="" class="nav-item ng-star-inserted"><a _ngcontent-mdr-c0="" class="nav-link" href="javascript:void(0);" role="tab" aria-controls="" aria-selected="false" id=""><span _ngcontent-mdr-c0="">Profile</span><!----></a></li><li _ngcontent-mdr-c0="" class="nav-item ng-star-inserted"><a _ngcontent-mdr-c0="" class="nav-link" href="javascript:void(0);" role="tab" aria-controls="" aria-selected="false" id=""><span _ngcontent-mdr-c0="">Messages</span><!----></a></li></ul><div _ngcontent-mdr-c0="" class="tab-content"><tab heading="Home" class="active tab-pane" role="tabpanel" aria-labelledby=""> 1. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </tab><tab heading="Profile" class="tab-pane" role="tabpanel" aria-labelledby=""> 2. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </tab><tab heading="Messages" class="tab-pane" role="tabpanel" aria-labelledby=""> 3. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </tab></div></tabset></div>
 </div>
