--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -4,7 +4,12 @@
   [navbarBrandFull]="{src: 'assets/img/brand/logo.png', width: 89, height: 25, alt: 'CoreUI Logo'}"
   [sidebarToggler]="'lg'"
   [asideMenuToggler]="'lg'">
-  <h3>Payment Gateway</h3>
+
+  <div _ngcontent-oqm-c3=""  class="form-inline my-2 my-lg-0 ng-untouched ng-pristine ng-valid" novalidate="" style="text-align: center; width:75%; display: flex;
+  justify-content: center;">
+    <input _ngcontent-oqm-c3="" aria-label="Search" style="width: 60%;" class="form-control mr-sm-2 center" placeholder="Search" type="search"><button _ngcontent-oqm-c3="" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+  </div>
+
   <!-- <ul class="nav navbar-nav d-md-down-none">
     <li class="nav-item px-3">
       <a class="nav-link" href="#">Dashboard</a>
@@ -18,10 +23,6 @@
   </ul> -->
     <ul class="nav navbar-nav ml-auto">
     <li class="nav-item d-md-down-none">
-      <form _ngcontent-oqm-c3="" class="form-inline my-2 my-lg-0 ng-untouched ng-pristine ng-valid" novalidate=""><input _ngcontent-oqm-c3="" aria-label="Search" class="form-control mr-sm-2" placeholder="Search" type="search"><button _ngcontent-oqm-c3="" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button></form>
-
-    </li>  
-    <li class="nav-item d-md-down-none">
       <a class="nav-link" href="#"><i class="icon-bell"></i><span class="badge badge-pill badge-danger">5</span></a>
     </li>
     <!-- <li class="nav-item d-md-down-none">
@@ -32,7 +33,7 @@
     </li> -->
     <li class="nav-item dropdown" dropdown placement="bottom right">
       <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle (click)="false">
-        <img src="assets/img/avatars/6.jpg" class="img-avatar" alt="admin@bootstrapmaster.com"/>
+        <img src="assets/img/avatars/profile.png" class="img-avatar" alt="admin@bootstrapmaster.com"/>
       </a>
       <div class="dropdown-menu dropdown-menu-right" *dropdownMenu aria-labelledby="simple-dropdown">
         <div class="dropdown-header text-center"><strong>Account</strong></div>
