--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -8,15 +8,17 @@
           </button> -->
           <div class="text-value"><h2>Total Alerts</h2></div>
         </div>
-        <div class="chart-wrapper mt-3 mx-3" style="height:180px;">
-          <canvas baseChart class="chart"
+        <div class="chart-wrapper mt-3 mx-3" style="height:100px;">
+          <!-- <canvas baseChart class="chart"
           [datasets]="lineChart2Data"
           [labels]="lineChart2Labels"
           [options]="lineChart2Options"
           [colors]="lineChart2Colours"
           [legend]="lineChart2Legend"
-          [chartType]="lineChart2Type"></canvas>
+          [chartType]="lineChart2Type"></canvas> -->
+          
         </div>
+        <h1 style="text-align: right; margin:10px; font-size: 85px;">29</h1>
       </div>
     </div><!--/.col-->
     <div class="col-sm-6 col-lg-6">
@@ -35,15 +37,16 @@
           </div>
           <div class="text-value"><h2>Total Reports</h2></div>
         </div>
-        <div class="chart-wrapper mt-3 mx-3" style="height:180px;">
-          <canvas baseChart class="chart"
+        <div class="chart-wrapper mt-3 mx-3" style="height:100px;">
+          <!-- <canvas baseChart class="chart"
                   [datasets]="lineChart1Data"
                   [labels]="lineChart1Labels"
                   [options]="lineChart1Options"
                   [colors]="lineChart1Colours"
                   [legend]="lineChart1Legend"
-                  [chartType]="lineChart1Type"></canvas>
+                  [chartType]="lineChart1Type"></canvas> -->
         </div>
+        <h1 style="text-align: right; margin:10px; font-size: 85px;">49</h1>
       </div>
     </div><!--/.col-->
     <div class="col-sm-6 col-lg-6">
@@ -59,17 +62,18 @@
               <a class="dropdown-item" href="#">Something else here</a>
             </div> -->
           </div>
-          <div class="text-value"><h2>Total Visualization</h2></div>
+          <div class="text-value"><h2>Total Visualizations</h2></div>
         </div>
-        <div class="chart-wrapper mt-3" style="height:180px;">
-          <canvas baseChart class="chart"
+        <div class="chart-wrapper mt-3" style="height:150px;">
+          <!-- <canvas baseChart class="chart"
           [datasets]="lineChart3Data"
           [labels]="lineChart3Labels"
           [options]="lineChart3Options"
           [colors]="lineChart3Colours"
           [legend]="lineChart3Legend"
-          [chartType]="lineChart3Type"></canvas>
+          [chartType]="lineChart3Type"></canvas> -->
         </div>
+        <h1 style="text-align: right; margin:10px; font-size: 85px;">39</h1>
       </div>
     </div><!--/.col-->
     <div class="col-sm-6 col-lg-6">
@@ -85,17 +89,18 @@
               <a class="dropdown-item" href="#">Something else here</a>
             </div> -->
           </div>
-          <div class="text-value"><h2>Users</h2></div>
+          <div class="text-value"><h2>Total Users</h2></div>
         </div>
-        <div class="chart-wrapper mt-3 mx-3" style="height:180px;">
-          <canvas baseChart class="chart"
+        <div class="chart-wrapper mt-3 mx-3" style="height:150px;">
+          <!-- <canvas baseChart class="chart"
           [datasets]="barChart1Data"
           [labels]="barChart1Labels"
           [options]="barChart1Options"
           [colors]="barChart1Colours"
           [legend]="barChart1Legend"
-          [chartType]="barChart1Type"></canvas>
+          [chartType]="barChart1Type"></canvas> -->
         </div>
+        <h1 style="text-align: right; margin:10px; font-size: 85px;">19</h1>
       </div>
     </div><!--/.col-->
   </div><!--/.row-->
