Adding the timeline widget

--- a/src/app/views/base/forms.component.html
+++ b/src/app/views/base/forms.component.html
@@ -1,5 +1,46 @@
 <div class="animated fadeIn">
-
   <div class="row">
-<div class="col-md-6 mb-4"><tabset _nghost-mdr-c0="" class="tab-container"><ul _ngcontent-mdr-c0="" class="nav nav-tabs" role="tablist" aria-label="Tabs"><!----><li _ngcontent-mdr-c0="" class="nav-item active ng-star-inserted"><a _ngcontent-mdr-c0="" class="nav-link active" href="javascript:void(0);" role="tab" aria-controls="" aria-selected="true" id=""><span _ngcontent-mdr-c0="">Home</span><!----></a></li><li _ngcontent-mdr-c0="" class="nav-item ng-star-inserted"><a _ngcontent-mdr-c0="" class="nav-link" href="javascript:void(0);" role="tab" aria-controls="" aria-selected="false" id=""><span _ngcontent-mdr-c0="">Profile</span><!----></a></li><li _ngcontent-mdr-c0="" class="nav-item ng-star-inserted"><a _ngcontent-mdr-c0="" class="nav-link" href="javascript:void(0);" role="tab" aria-controls="" aria-selected="false" id=""><span _ngcontent-mdr-c0="">Messages</span><!----></a></li></ul><div _ngcontent-mdr-c0="" class="tab-content"><tab heading="Home" class="active tab-pane" role="tabpanel" aria-labelledby=""> 1. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </tab><tab heading="Profile" class="tab-pane" role="tabpanel" aria-labelledby=""> 2. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </tab><tab heading="Messages" class="tab-pane" role="tabpanel" aria-labelledby=""> 3. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </tab></div></tabset></div>
-</div>
+    <div class="col-md-2">
+      &nbsp;
+    </div>
+    <div  style="
+    width: 50px;
+    height: 50px;
+    background-color: #20a8d8;
+    border-radius: 50%;
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    font-size: 30px;
+    color:white">
+    1
+    </div><!--/.col-->
+    <div class="col-md-3">
+      <hr>
+    </div>
+    <div  style="
+    width: 50px;
+    height: 50px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    font-size: 30px;">
+    2
+    </div><!--/.col-->
+    <div class="col-md-3" >
+      <hr style="color:#000000">
+    </div>
+      <div  style="
+    width: 50px;
+    height: 50px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    font-size: 30px;">
+    3
+    </div>
+    </div><!--/.col-->
